Fix issue with filename of colorpicker

--- a/index.html
+++ b/index.html
@@ -787,7 +787,7 @@ placement: 'auto top'
 	</script>
 	<script type="text/javascript" src="ntc.js">
 	</script>
-	<script type="text/javascript" src="colorpicker.js">
+	<script type="text/javascript" src="colorPicker.js">
 	</script>
 </body>
 
