--- a/help.html
+++ b/help.html
@@ -110,12 +110,13 @@ $(function(){
 <li> <a href="https://gist.github.com/JDMCreator/c0944e1caab3b913353ac165177b5241">CSVtoArray.js</a> (by myself) : Convert a CSV file to an Array
 </ul>
 
-<p>This project uses three libraries :
+<p>This project uses four libraries :
 
 <p><ul>
 <li> <a href="https://getbootstrap.com">Bootstrap 3.3</a>
 <li> <a href="http://jquery.com">JQuery</a>
 <li> <a href="http://chir.ag/projects/ntc/">ntc.js</a> : Convert a RGBA value to a color name
+<li> <a href="https://sheetjs.com/">SheetJS</a> : Read and import spreadsheets
 </ul>
 
 <p>Most of the icons are from <a href="http://glyphicons.com">glyphicons</a> and are included in <a href="https://getbootstrap.com">Bootstrap 3.3</a>. Some are from me. The "underline" icon is made by <a href="https://www.flaticon.com/authors/dave-gandy" title="Dave Gandy">Dave Gandy</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
@@ -173,6 +174,13 @@ document.write("t")
 <li>mpxtabular</li>
 </ul>
 <h3><a id="Supported_commands_40"></a>Supported commands</h3>
+
+<ul>
+<li> $ ... $
+<li> $$ ... $$
+<li> \( ... \)
+<li> \[ ... \]
+</ul>
 
 <ul>
 <li> ``
